--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 body {
 	background-color: aliceblue;
 	width: 99%;
-	min-height: 100%;
+	max-height: 100%;
 	font-family: 'Poppins', 'Open Sans', sans-serif;
 	color: cornflowerblue;
 }
